update in resume

--- a/resume.html
+++ b/resume.html
@@ -9,8 +9,8 @@
   <body lang="en">
     <section id="main">
       <header id="title">
-        <h1>John Doe</h1>
-        <span class="subtitle">Plaintiff, defendant &amp; witness</span>
+        <h1>Vineet Singh</h1>
+        <span class="subtitle">Data Analyst</span>
       </header>
       <section class="main-block">
         <h2>
