--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<a href="https://github.com/vineetdsat/vineetdsat/raw/main/Resume.pdf" class="button">Download Resume</a> &emsp;
 							<a href="https://public.tableau.com/app/profile/vineet.singh3192" class="button">Tableau Profile</a>
 							<br><br>
-							<a href="Resume.pdf"><p style = "font-size: small; font-style: italic; font-weight: 300;">View My Resume</p></a>
+							<a href="Resume.pdf" target="_blank" rel="noreferrer noopener"><p style = "font-size: small; font-style: italic; font-weight: 300;">View My Resume</p></a>
 							
 							
 
