--- a/achivements.html
+++ b/achivements.html
@@ -12,6 +12,16 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel=icon href="images/Transparent Logo.png" sizes="16x16" type="image/png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-XPTFSXNMYP"></script>
+
+		<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+ 		gtag('config', 'G-XPTFSXNMYP');
+		</script>
+
 	</head>
 	<body class="is-preload">
 
