--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
 							</ul>
 
 							<p style = "font-size: small; font-style: italic;">
-								“Without big data analytics, companies are blind and deaf, wandering out onto the web like 
-								deer on a freeway.”
-								 – By Geoffrey Moore, an American Management Consultant and Author
+								“Data is a precious thing and will last longer than the systems themselves.” – Tim Berners-Lee
 							</p>
 
 							<a href="Resume.pdf" target="_blank" rel="noreferrer noopener" class="button">View Resume</a> &emsp;
