--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@ We are using TPOT to help us zero in on one model that we can then explore and o
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner" >
-							<h2 class="major">Get in touch</h2>
+
+							<h2 class="major">Have Doubts, want to discuss a Project or Hire me, Feel Free to <br>Get in touch</h2>
 
 							<article>
 								<ul class="contact">
@@ -176,9 +177,6 @@ We are using TPOT to help us zero in on one model that we can then explore and o
 									</li>
 									<li class="icon brands fa-github">
 										<a href="https://github.com/vineetdsat" target="_blank" rel="noreferrer noopener">github.com/vineetdsat</a>
-									</li>
-									<li class="icon brands fa-instagram">
-										<a href="https://www.instagram.com/_vineet__singh_/" target="_blank" rel="noreferrer noopener">instagram.com/_vineet__singh_/</a>
 									</li>
 								</ul>
 							</article>
