Updates job discription

--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
 										<h2 class="major">Vamstar - Data Analyst</h2>
 										<p>March 2021 - Present</p>
 										<p>	
-											<li>Work with the Data Management Team to provide Clean and Accurate data for Analytics</li>
-											<li>Sourced medical tender and award data from multiple websites</li>
-											<li>Automated the data extraction process for major sources through scrapping</li>
-											<li>Prepared and cleaned the data for advanced analytics</li>
+											<li>An Analyst with the Data Management Team to provide Clean and Accurate data for Advance Analytics</li>
+											<li>Sourced Pharmaceutical tender and award data from multiple sources, with research experience in the MENA region &
+												the European Region</li>
+											<li>Structured the QA Process & tackled the issues in the existing data, hence reduced the data drop rate by 30%</li>
+											<li>Researched the Products and the Market according to the need of the Client</li>
 										</p>
 									</div>
 								</div>
